--- a/_posts/0000-01-02-JANA-rali.md
+++ b/_posts/0000-01-02-JANA-rali.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+I am editing for first official commit
 Use the left arrow to go back!
